# Hybrid25_ECU

./: .gitignore  README.md
Boards/: ADC+Servo.xlsx  Central_ECU_Order_1.xlsx  TS_Symbols.bak  TS_Symbols.kicad_sym
Boards/ADC+Servo Stencil/: -B_Cu.gbr  -B_Mask.gbr  -B_Paste.gbr  -B_Silkscreen.gbr  -Edge_Cuts.gbr  -F_Cu.gbr  -F_Mask.gbr  -F_Paste.gbr  -F_Silkscreen.gbr  -NPTH.drl  -PTH.drl  -job.gbrjob
Boards/ADC_Board/: ADC_Board.csv  ADC_Board.kicad_pcb  ADC_Board.kicad_prl  ADC_Board.kicad_pro  ADC_Board.kicad_sch  Analog.kicad_sch  _autosave-ADC_Board.kicad_pcb  fp-info-cache  fp-lib-table
Boards/ADC_Board/Manufacture/: ADC_Board-B_Cu.gbr  ADC_Board-B_Mask.gbr  ADC_Board-B_Paste.gbr  ADC_Board-B_Silkscreen.gbr  ADC_Board-Edge_Cuts.gbr  ADC_Board-F_Cu.gbr  ADC_Board-F_Mask.gbr  ADC_Board-F_Paste.gbr  ADC_Board-F_Silkscreen.gbr  ADC_Board-In1_Cu.gbr  ADC_Board-In2_Cu.gbr  ADC_Board-NPTH.drl  ADC_Board-PTH.drl  (+1 more)
Boards/CAD_Models/: 0430450412.stp  0430451027.stp  U-DFN2020-6.step
Boards/Central_ECU/: Central_ECU.csv  Central_ECU.kicad_pcb  Central_ECU.kicad_prl  Central_ECU.kicad_pro  Central_ECU.kicad_sch  README.md  _autosave-Central_ECU.kicad_pcb  connectors.kicad_sch  fp-info-cache  fp-lib-table  ign+nc_valve.kicad_sch  pyro_ls.kicad_sch  sym-lib-table  ~Central_ECU.kicad_pcb.lck
Boards/Pressure_Board/: Pressure_Board.kicad_prl  Pressure_Board.kicad_pro
Boards/Servo_Board/: Servo_Board.csv  Servo_Board.kicad_pcb  Servo_Board.kicad_prl  Servo_Board.kicad_pro  Servo_Board.kicad_sch  fp-info-cache
Boards/footprints.pretty/: RUX0012A.kicad_mod  SOT23_DYY_TEX-L.kicad_mod  SOT23_DYY_TEX-M.kicad_mod  SOT23_DYY_TEX.kicad_mod
Code/Central ECU/: .mxproject  CMakeCache.txt  CMakeLists.txt  ECU_Mainboard.ioc  README.md  build.ninja  cmake_install.cmake  compile_commands.json
Code/ECU ADC/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  ECU_ADC.ioc  STM32G0B1XX_FLASH.ld  build.ninja  cmake_install.cmake  compile_commands.json
Code/ECU ADC/Core/Inc/: main.h  stm32g0xx_hal_conf.h  stm32g0xx_it.h
Code/ECU ADC/Core/Src/: main.c  stm32g0xx_hal_msp.c  stm32g0xx_it.c
Code/ECU ADC/cmake/stm32cubemx/: CMakeLists.txt  cmake_install.cmake
Code/ECU ADC/demo/: CMakeLists.txt
Code/ECU ADC/demo/thermocouple_lookup/: CMakeLists.txt  thermocouple_lookup.c
Code/ECU ADC/include/: config.h  peripherals.h
Code/ECU ADC/src/: app.c  app.h
Code/ECU ADC/src/modules/: can  timebase_override.c
Code/ECU ADC/src/modules/ADS124/: ADS124.c  ADS124.h  ADS124_can.c  ADS124_can.h  ADS124_config_guide.h  ADS124_example.c  README.md  ads124_buffers.c  ads124_buffers.h  ads124_example.h  ads124_handler.c  ads124_handler.h  hal.c  hal.h
Code/ECU ADC/src/modules/adc/: adc.c  adc.h
Code/ECU ADC/src/modules/battery_check/: battery_check.c
Code/ECU ADC/src/modules/can_buffer/: can_buffer.c  can_buffer.h
Code/ECU ADC/src/modules/can_handlers/: can_handlers.c  can_handlers.h
Code/ECU ADC/src/modules/debug_io/: debug_io.c  debug_io.h
Code/ECU ADC/src/modules/pte7300/: pte7300.c  pte7300.h
Code/ECU ADC/src/modules/thermocouple_k/: thermocouple_k.c  thermocouple_k.h
Code/ECU Servo/: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  ECU_Servo.ioc  build.ninja  cmake_install.cmake  compile_commands.json
(+143 files in other folders)
